--- a/style.css
+++ b/style.css
@@ -1,9 +1,39 @@
 
-body {
-    background-color: bisque;
+header {
+    text-align: center;
+}
+.topnavigation {
+    color: blue;
+}
+.profile  {
+    border: 1px solid black;
 
 }
-header {
-    display: flex;
-    justify-content: space-between;
+#Jaredspic {
+    width: 200px;
+    height: 200px;
 }
+#mechanic {
+    width: 200px;
+    height: 200px;  
+}
+.jobinfo {
+    border: 1px solid black;
+}
+section {
+    text-align: center;
+
+}
+footer {
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+}
+@media only screen and (min-width:300px) and (max-width:480px) {
+#Jaredspic {
+    height: 150px;   
+}
+#mechanic {
+    height: 150px;
+}
+ }  
