--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header {
 .profile  {
     border: 1px solid black;
 
+
 }
 .profile p{
 color: black;
@@ -42,6 +43,12 @@ color: black;
 }
 section {
     text-align: center;
+
+}
+.contactform {
+ text-align: center;
+ font-size: 20px;
+ font-family: cursive;
 
 }
 footer {
