--- a/assets/style.css
+++ b/assets/style.css
@@ -51,7 +51,21 @@ color: black;
 #codesample {
     width: 170px;
     height: 170px;
+    margin-right: 100px;
+    margin-bottom: 50px;
 }
+
+#coding {
+    margin-bottom: 50px;
+}
+#raceclub {
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+#horsecreator {
+    margin-top: 50px;
+}
+
 .jobinfo {
     border: 1px solid black;
 
@@ -95,3 +109,5 @@ width: 100px;
     width: 100px;
 }
  }  
+
+ 
