--- a/assets/style.css
+++ b/assets/style.css
@@ -47,17 +47,23 @@ color: black;
 #coding {
     width: 180px;
     height: 180px;
+    display: block; 
+    margin: 0 auto; 
 }
+
 #codesample {
     width: 170px;
     height: 170px;
-    margin-right: 100px;
+    display: block; 
+    margin: 0 auto; 
     margin-bottom: 50px;
 }
 
-#coding {
-    margin-bottom: 50px;
+
+.pictohyper {
+    text-align: center;
 }
+
 #raceclub {
     margin-top: 20px;
     margin-bottom: 50px;
