--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,13 @@ color: black;
     display: block; 
     margin: 0 auto; 
 }
-
+#firstwork{
+    width: 180px;
+    height: 180px;
+    display: block; 
+    margin: 0 auto; 
+    margin-bottom: 50px;
+}
 #codesample {
     width: 170px;
     height: 170px;
